// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for eligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {},
  "externalId": "ERS001",
  "formInformation": {
    "paroleSupervisor": "DOE JANE",
    "tdcjNumber": "12345678",
    "unitSupervisor": "SMITH JOHN",
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_TX",
}
`;

exports[`schema for eligibleNoFormInfo 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {},
  "externalId": "ERS002",
  "formInformation": {},
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_TX",
}
`;
